[package]
name = "dummyvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

env_logger = "0.9"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
json = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aptos-types = { path = "../types", features = ["fuzzing"] }
aptos-crypto = { path = "../crates/aptos-crypto" }
lazy_static = "1.4.0"